--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,6 +40,9 @@
     </div>
 
     <div id="main" role="main" class="container">
+      <div id="introduction">
+        {% include introduction.html %}
+      </div>
       {{ content }}
     </div>
 
