--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -2,3 +2,7 @@
 <p>
 CoBEAR is a CMS/Web Application Platform based on BEAR.Sunday.
 </p>
+<ul>
+  <li><a href="https://github.com/CoBEAR">Download CoBEAR</a></li>
+  <li><a href="https://plus.google.com/u/0/communities/111454545607597088398">Talk about CoBEAR</a></li>
+</ul>
