--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -1,8 +1,9 @@
 <h2>What is CoBEAR ?</h2>
 <p>
-CoBEAR is a CMS/Web Application Platform based on BEAR.Sunday.
+CoBEAR is a CMS/Web Application Platform based on <a href="https://github.com/bearsunday">BEAR.Sunday</a>.
 </p>
 <ul>
+  <li><a href="https://docs.google.com/presentation/d/1sud2HrkY8Ok62-_ow3cGSEobDvnUsjiTZdxoqr70BoQ/edit?usp=sharing">What is CoBEAR ?</a></li>
   <li><a href="https://github.com/CoBEAR">Download CoBEAR</a></li>
   <li><a href="https://plus.google.com/u/0/communities/111454545607597088398">Talk about CoBEAR</a></li>
 </ul>
