--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -4,6 +4,7 @@ CoBEAR is a CMS/Web Application Platform based on <a href="https://github.com/be
 </p>
 <ul>
   <li><a href="https://docs.google.com/presentation/d/1sud2HrkY8Ok62-_ow3cGSEobDvnUsjiTZdxoqr70BoQ/edit?usp=sharing">What is CoBEAR ?</a></li>
+  <li><a href="http://cobear.github.io/images/cobear-leaflet.pdf">Leaflet (PDF)</a></li>
   <li><a href="https://github.com/CoBEAR">Download CoBEAR</a></li>
   <li><a href="https://plus.google.com/u/0/communities/111454545607597088398">Talk about CoBEAR</a></li>
 </ul>
